--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" style="border:none;">
               <img src="./Assets/Hamburguer.png" alt="" class="hamburguer">
             </button>
-           <!-- <a href="index.html"> <img src="./Assets/Logo.png" alt="Logo" id="logo"></a> -->
+           <a href="index.html"> <img src="./Assets/Logo.png" alt="Logo" id="logo"></a>
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -42,22 +42,22 @@
     </nav>
     </header>
     <main>
-            <img class="row row-cols-1 row-cols-1 g-4 portada" src="./Assets/mono_Alma_1.png" alt="Mono_1">
-            <div class="subtitulo">
+             <img class="row row-cols-1 row-cols-1 g-4 portada" src="./Assets/mono_Alma_1.png" alt="Mono_1">
+            <div class="subtitulo"> 
                 <p class="prim_ver">Primavera/Verano</p>
             </div>
-            <div>
             <!-- 15 cards -->
-                <div class="row row-cols-1 row-cols-2 g-4 productos_index" >
-                    <div class="col">
-                      <div class="card">
+                 <div class="row row-cols-1 row-cols-2 g-4  productos_index" >
+                     <div class="col">
+                       <div class="card">
                         <a href="./sections/products_details/Combo_Gardenia.html"><img src="./Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="..."></a>
-                        <div class="card-body">
+                         <div class="card-body">
                           <h5 class="card-title">Conjunto Gardenia</h5>
                           <span class="card-text">$7700</span>
-                        </div>
+                        </div> 
                       </div>
                     </div>
+                     
                     <div class="col">
                       <div class="card">
                         <a href="./sections/products_details/Combo_Lilo.html"><img src="./Assets/Musculosa y short Lilo.png" class="card-img-top" alt="..."></a>
@@ -193,9 +193,8 @@
                         </div>
                       </div>
                     </div>
-                  </div>
-            </div>
-    </main>
+                   </div> 
+      </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
