--- a/sections/como_comprar.html
+++ b/sections/como_comprar.html
@@ -81,16 +81,16 @@
             </div>
         </button></a>
 </main>
-<footer>
-    <div>
-        <div>
-            <img src="../Assets/Fb.png" alt="Facebook">
-            <img src="../Assets/Ig.png" alt="Instagram">
-            <img src="../Assets/Black_wpp.png" alt="Wpp">
+<footer class="footer_compra">
+    <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
+        <div class="footer_img">
+            <img src="../Assets/Fb.png" alt="Facebook" class="footer_red">
+            <img src="../Assets/Ig.png" alt="Instagram" class="footer_red">
+            <img src="../Assets/Black_wpp.png" alt="Wpp" class="footer_red">
         </div>
-        <div>
-            <img src="../Assets/copy.png" alt="">
-            <p>2020 Alma Tienda. Todos los derechos reservados</p>
+        <div class="footer_p">
+            <img src="../Assets/copy.png" alt="" class="footer_c">
+            <p class="footer_txt">2020 Alma Tienda. Todos los derechos reservados</p>
         </div>
     </div>
 </footer>
