--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- 15 cards -->
                  <div class="row row-cols-1 row-cols-2 g-4  productos_index" >
                      <div class="col">
-                       <div class="card">
+                       <div class="card card_index">
                         <a href="./sections/products_details/Combo_Gardenia.html"><img src="./Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="..."></a>
                          <div class="card-body">
                           <h5 class="card-title">Conjunto Gardenia</h5>
@@ -59,7 +59,7 @@
                     </div>
                      
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Combo_Lilo.html"><img src="./Assets/Musculosa y short Lilo.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Conjunto Lilo</h5>
@@ -68,7 +68,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <img src="./Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Conjunto Dalia</h5>
@@ -77,7 +77,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Palazzo_Gardenia.html"><img src="./Assets/Palazzo Gardenia.png" class="card-img-top" alt="Palazzo Gardenia"></a>
                         <div class="card-body">
                           <h5 class="card-title">Palazzo Gardenia</h5>
@@ -86,7 +86,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Remera_Gardenia.html"><img src="./Assets/Remera Gardenia.png" class="card-img-top" alt="Remera Gardenia"></a>
                         <div class="card-body">
                           <h5 class="card-title">Remera Gardenia</h5>
@@ -95,7 +95,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Mono_Alma.html"><img src="./Assets/mono_Alma_1.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Mono Alma</h5>
@@ -104,7 +104,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Mono_Amapolas.html"><img src="./Assets/Mono Amapolas.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Mono Amapolas</h5>
@@ -113,7 +113,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Mono_Iris.html"><img src="./Assets/Mono Iris 1.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Mono Iris</h5>
@@ -122,7 +122,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Mono_Jacaranda.html"><img src="./Assets/Mono Jacarandá.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Mono Jacarandá</h5>
@@ -131,7 +131,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Mono_Magnolia.html"><img src="./Assets/Mono Magnolia.jpg" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Mono Magnolia</h5>
@@ -140,7 +140,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Vestido_Fresia.html"><img src="./Assets/Vesrtido Fresia 1.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Vesrtido Fresia</h5>
@@ -149,7 +149,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Vestido_Azalea.html"><img src="./Assets/Vestido Azalea rosa 2.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Vestido Azalea</h5>
@@ -158,7 +158,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Vestido_Begonia.html"><img src="./Assets/Vestido Begonia.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Vestido Begonia</h5>
@@ -167,7 +167,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Vestido_Cala.html"><img src="./Assets/Vestido Cala.jpg" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Vestido Cala</h5>
@@ -176,7 +176,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Vestido_Jazmin.html"><img src="./Assets/Vestido Jazmin 1.jpg" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Vestido Jazmin</h5>
@@ -185,7 +185,7 @@
                       </div>
                     </div>
                     <div class="col">
-                      <div class="card">
+                      <div class="card card_index">
                         <a href="./sections/products_details/Vestido_Melissa.html"><img src="./Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Vestido Melissa</h5>
