--- a/sections/productos.html
+++ b/sections/productos.html
@@ -10,13 +10,12 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-light bg-light fixed-top">
+        <nav class="navbar navbar-light bg-light fixed-top" st>
             <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" style="border:none;">
+              <img src="../Assets/Hamburguer.png" alt="" class="hamburguer">
             </button>
             <a href="../index.html"> <img src="../Assets/Logo.png" alt="Logo" id="logo"></a>
-            <!-- cuidado tamaño -->
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -50,7 +49,7 @@
     </div>
     <div class="row row-cols-1 row-cols-2 g-4">
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="./products_details/Vestido_Melissa.html"><img src="../Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="Vestido Melissa"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Melissa</h5>
@@ -59,7 +58,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Vestido_Jazmin.html"><img src="../Assets/Vestido Jazmin 1.jpg" class="card-img-top" alt="Vestido Jazmin"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Jazmin</h5>
@@ -68,7 +67,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Vestido_Cala.html">
             <img src="../Assets/Vestido Cala.jpg" class="card-img-top" alt="Vestido Cala"></a>
             <div class="card-body">
@@ -78,7 +77,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Vestido_Begonia.html">
             <img src="../Assets/Vestido Begonia.png" class="card-img-top" alt="Vestido Begonia"></a>
             <div class="card-body">
@@ -88,7 +87,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Vestido_Azalea.html">
             <img src="../Assets/Vestido Azalea rosa 2.png" class="card-img-top" alt="Vestido Azalea"></a>
             <div class="card-body">
@@ -98,7 +97,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Vestido_Fresia.html">
             <img src="../Assets/Vesrtido Fresia 1.png" class="card-img-top" alt="Vestido Fresia"></a>
             <div class="card-body">
@@ -108,27 +107,27 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Combo_Dalia.html">
             <img src="../Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="Remerón y pantalón Dalia"></a>
             <div class="card-body">
-              <h5 class="card-title">Remerón y pantalón Dalia</h5>
+              <h5 class="card-title">Conjunto Dalia</h5>
               <span class="card-text">$7000</span>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections//products_details/Combo_Gardenia.html">
             <img src="../Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="Conjunto Gardenia"></a>
             <div class="card-body">
-              <h5 class="card-title">Palazzo y remera Gardenia</h5>
+              <h5 class="card-title">Conjunto Gardenia</h5>
               <span class="card-text">$7700</span>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Remera_Gardenia.html">
             <img src="../Assets/Remera Gardenia.png" class="card-img-top" alt="Remera Gardenia"></a>
             <div class="card-body">
@@ -138,7 +137,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Palazzo_Gardenia.html">
             <img src="../Assets/Palazzo Gardenia.png" class="card-img-top" alt="Palazzo Gardenia"></a>
             <div class="card-body">
@@ -148,7 +147,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Combo_Lilo.html">
             <img src="../Assets/Musculosa y short Lilo.png" class="card-img-top" alt="Musculosa y short Lilo"></a>
             <div class="card-body">
@@ -158,7 +157,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections//products_details/Mono_Alma.html">
             <img src="../Assets/mono_Alma_1.png" class="card-img-top" alt="Mono Alma"></a>
             <div class="card-body">
@@ -168,7 +167,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Mono_Magnolia.html">
             <img src="../Assets/Mono Magnolia.jpg" class="card-img-top" alt="Mono Magnolia"></a>
             <div class="card-body">
@@ -178,7 +177,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Mono_Jacaranda.html">
             <img src="../Assets/Mono Jacarandá.png" class="card-img-top" alt="Mono Jacarandá"></a>
             <div class="card-body">
@@ -188,7 +187,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Mono_Iris.html">
             <img src="../Assets/Mono Iris 1.png" class="card-img-top" alt="Mono Iris"></a>
             <div class="card-body">
@@ -198,7 +197,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Mono_Amapolas.html">
             <img src="../Assets/Mono Amapolas.png" class="card-img-top" alt="Mono Amapolas"></a>
             <div class="card-body">
@@ -208,7 +207,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Palazo_Alerce.html">
             <img src="../Assets/Palazo Alerce.png" class="card-img-top" alt="Palazo Alerce"></a>
             <div class="card-body">
@@ -218,7 +217,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Pantalón_Lilo.html">
             <img src="../Assets/Pantalón Lilo.png" class="card-img-top" alt="Pantalón Lilo"></a>
             <div class="card-body">
@@ -228,7 +227,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Remera_Alameda.html">
             <img src="../Assets/Remera Alameda.png" class="card-img-top" alt="Remera Alameda"></a>
             <div class="card-body">
@@ -238,7 +237,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Sweater_Cerezo.html">
             <img src="../Assets/Sweater Cerezo.jpg" class="card-img-top" alt="Sweater Cerezo"></a>
             <div class="card-body">
@@ -248,7 +247,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Sweater_Almendro.html">
             <img src="../Assets/Sweater Almendro marrón.jpg" class="card-img-top" alt="Sweater Almendro"></a>
             <div class="card-body">
@@ -258,7 +257,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Capa_Acacia.html">
             <img src="../Assets/Capa-Acacia-beige-2.png" class="card-img-top" alt="Capa Acacia"></a>
             <div class="card-body">
@@ -268,7 +267,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Tapado_Alamo.html">
             <img src="../Assets/Tapado-Álamo-terracota-2.png" class="card-img-top" alt="Tapado Álamo"></a>
             <div class="card-body">
@@ -278,7 +277,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Tapado_Tule.html">
             <img src="../Assets/Tapado Tule verde inglés.png" class="card-img-top" alt="Tapado Tule"></a>
             <div class="card-body">
@@ -288,7 +287,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card card_products">
             <a href="../sections/products_details/Vestido_Nogal.html">
             <img src="../Assets/Vestido Nogal beige.png" class="card-img-top" alt="Vestido Nogal"></a>
             <div class="card-body">
