--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                     </div>
                     <div class="col">
                       <div class="card card_index">
-                        <img src="./Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="...">
+                        <a href="./sections/products_details/Combo_Dalia.html">
+                        <img src="./Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="..."></a>
                         <div class="card-body">
                           <h5 class="card-title">Conjunto Dalia</h5>
                           <span class="card-text">$7000</span>
