--- a/sections/productos.html
+++ b/sections/productos.html
@@ -47,7 +47,7 @@
       <img style="margin-left:10px ;" src="../Assets/Filtrar.png" alt="">
         <span style="margin-left:15px ;">Filtrar</span>
     </div>
-    <div class="row row-cols-1 row-cols-2 g-4 productos_index">
+    <div class="row row-cols-1 row-cols-2 g-4 products">
         <div class="col">
           <div class="card card_products">
             <a href="./products_details/Vestido_Melissa.html"><img src="../Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="Vestido Melissa"></a>
