Arreglo nav y styles generales

--- a/sections/contacto.html
+++ b/sections/contacto.html
@@ -17,7 +17,7 @@
             </button>
             <img src="../Assets/Logo.jpg" alt="logo" id="logo">
             <!-- cuidado tamaño -->
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
