--- a/sections/productos.html
+++ b/sections/productos.html
@@ -9,38 +9,38 @@
     <title>Products</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-light bg-light fixed-top" st>
-            <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" style="border:none;">
-              <img src="../Assets/Hamburguer.png" alt="" class="hamburguer">
-            </button>
-            <a href="../index.html"> <img src="../Assets/Logo.png" alt="Logo" id="logo"></a>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
-                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                      <li class="nav-item">
-                          <a class="nav-link" href="#">Productos</a>
-                      </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="como_comprar.html">Cómo Comprar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </li>
-                </ul>
-              </div>
+  <header>  
+    <nav class="navbar navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" style="border:none;">
+          <img src="../Assets/Hamburguer.png" alt="" class="hamburguer">
+        </button>
+       <a href="../index.html"> <img src="../Assets/Logo.png" alt="Logo" id="logo"></a>
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel" style="width:20rem ;">
+            <div class="offcanvas-header" style="padding: 1.5rem 18rem;">
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
+            <div class="offcanvas-body">
+                <form class="d-flex" role="search" style="width: 70%;">
+                  <button class="btn btn-outline-success" type="submit" style="border:none;"><img src="../Assets/Buscar.png" alt=""></button>
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" style="color:   #A9C3B4; border-color: #A9C3B4;">
+                </form>
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item">
+                    <a class="nav-link" href="#" style="color: #A9C3B4;">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="como_comprar.html" style="color: #A9C3B4;">Cómo Comprar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contacto.html" style="color: #A9C3B4;">Contacto</a>
+                </li>
+            </ul>
+          </div>
         </div>
-    </nav>
-    </header>
+    </div>
+</nav>
+</header>
     <main>
     <!-- 27 productos -->
     <div class="filtro">
@@ -298,6 +298,19 @@
         </div>
     </div>
     </main>
+    <footer>
+      <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
+          <div class="footer_img">
+              <img src="../Assets/Fb.png" alt="Facebook" class="footer_red">
+              <img src="../Assets/Ig.png" alt="Instagram" class="footer_red">
+              <img src="../Assets/Black_wpp.png" alt="Wpp" class="footer_red">
+          </div>
+          <div class="footer_p">
+              <img src="../Assets/copy.png" alt="" class="footer_c">
+              <p class="footer_txt">2020 Alma Tienda. Todos los derechos reservados</p>
+          </div>
+      </div>
+  </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
