Arreglo nav y styles details

--- a/sections/products_details/Vestido_Nogal.html
+++ b/sections/products_details/Vestido_Nogal.html
@@ -52,19 +52,19 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
                 <img src="../../Assets/Vestido Nogal beige.png" class="d-block w-100 img_product" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-block">
                   <h5>Beige</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
                 <img src="../../Assets/Vestido Nogal beige 2.png" class="d-block w-100 img_product" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-block" >
                   <h5>Beige</h5>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="../../Assets/Vestido Nogal beige y negro.jpg" class="d-block w-100 img_product" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-block">
                   <h5>Beige y negro</h5>
                 </div>
               </div>
