--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="./sections/como_comprar.html" style="color: #A9C3B4;">Cómo Comprar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./sections/contacto.html" style="color: #A9C3B4;">Contacto</a>
+                        <a class="nav-link" href="#" style="color: #A9C3B4;">Contacto</a>
                     </li>
                 </ul>
               </div>
@@ -199,9 +199,9 @@
       <footer>
         <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
             <div class="footer_img">
-                <img src="./Assets/Fb.png" alt="Facebook" class="footer_red">
-                <img src="./Assets/Ig.png" alt="Instagram" class="footer_red">
-                <img src="./Assets/Black_wpp.png" alt="Wpp" class="footer_red">
+                <a href="https://www.facebook.com/somosalma.tienda"><img src="./Assets/Fb.png" alt="Facebook" class="footer_red"></a>
+               <a href="https://www.instagram.com/somosalma.tienda/?hl=es-la"><img src="./Assets/Ig.png" alt="Instagram" class="footer_red"></a>
+                <a href="https://wa.link/3ravpj"><img src="./Assets/Black_wpp.png" alt="Wpp" class="footer_red"></a>
             </div>
             <div class="footer_p">
                 <img src="./Assets/copy.png" alt="" class="footer_c">
