--- a/sections/products_details/Tapado_Tule.html
+++ b/sections/products_details/Tapado_Tule.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="../como_comprar.html" style="color: #A9C3B4;">Cómo Comprar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../contacto.html" style="color: #A9C3B4;">Contacto</a>
+                  <a class="nav-link" href="#" style="color: #A9C3B4;">Contacto</a>
                 </li>
             </ul>
           </div>
@@ -95,6 +95,19 @@
             </div>
         </div>
     </main>
+    <footer class="footer_compra">
+      <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
+        <div class="footer_img">
+          <a href="https://www.facebook.com/somosalma.tienda"><img src="../../Assets/Fb.png" alt="Facebook" class="footer_red"></a>
+         <a href="https://www.instagram.com/somosalma.tienda/?hl=es-la"><img src="../../Assets/Ig.png" alt="Instagram" class="footer_red"></a>
+          <a href="https://wa.link/3ravpj"><img src="../../Assets/Black_wpp.png" alt="Wpp" class="footer_red"></a>
+      </div>
+          <div class="footer_p">
+              <img src="../../Assets/copy.png" alt="" class="footer_c">
+              <p class="footer_txt">2020 Alma Tienda. Todos los derechos reservados</p>
+          </div>
+      </div>
+  </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
