Estilos detalles productos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <form class="d-flex" role="search" style="width: 70%;">
+                    <form class="d-flex" role="search" style="width: 70%; margin-bottom: 1rem;">
                       <button class="btn btn-outline-success" type="submit" style="border:none;"><img src="./Assets/Buscar.png" alt=""></button>
                         <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar" style="color:   #A9C3B4; border-color: #A9C3B4;">
                     </form>
