--- a/sections/products_details/Mono_Alma.html
+++ b/sections/products_details/Mono_Alma.html
@@ -42,17 +42,18 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/mono_Alma_1.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/mono_Alma_1.png" class="img_product d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Mono Alma 2.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Mono Alma 2.png" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -65,20 +66,21 @@
             </button>
           </div>
           <div>
-            <h3>Mono Alma</h3>
-            <p>Confeccionado en twill, una tela súper suave y fresca. Tiene escote en V y botones en el frente. Con bolsillos laterales y lazo en la cintura para ajustar.</p>
-            <div>
-              <h3>$6000</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Mono Alma</h3>
+            <p class="product_description">Confeccionado en twill, una tela súper suave y fresca. Tiene escote en V y botones en el frente. Con bolsillos laterales y lazo en la cintura para ajustar.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$6000</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$7700</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$7700</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Terracota</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Terracota</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
