--- a/sections/products_details/Remera_Gardenia.html
+++ b/sections/products_details/Remera_Gardenia.html
@@ -42,13 +42,14 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide presentacion_producto" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Remera Gardenia.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Remera Gardenia.png" class="d-block w-100 img_product" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -61,20 +62,21 @@
             </button>
           </div>
           <div>
-            <h3>Remera Gardenia</h3>
-            <p>Confeccionada en morley bastón ancho. Tiene mangas terminadas en dobladillo y cuello bote al corte</p>
-            <div>
-              <h3>$3500</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Remera Gardenia</h3>
+            <p class="product_description">Confeccionada en morley bastón ancho. Tiene mangas terminadas en dobladillo y cuello bote al corte</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$3500</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$4400</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$4400</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Gris</h5>
+            <div  style="margin-bottom: 140px;">
+              <h4  class="color">Color</h4>
+              <h5 class="color_options">-Gris</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
