--- a/sections/products_details/Sweater_Almendro.html
+++ b/sections/products_details/Sweater_Almendro.html
@@ -42,7 +42,8 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide presentacion_producto" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -50,19 +51,19 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Sweater Almendro Camel.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Sweater Almendro Camel.jpg" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Camel</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Sweater Almendro marrón.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Sweater Almendro marrón.jpg" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Marrón</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Sweater-Almendro-tres-colores.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Sweater-Almendro-tres-colores.png" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -75,22 +76,23 @@
             </button>
           </div>
           <div>
-            <h3>Sweater Almendro</h3>
-            <p>Confeccionado en lana acrílica. Tiene un trenzado de rombos y cuello tortuga. Es un modelo oversize, por lo tanto es bien amplio.</p>
-            <div>
-              <h3>$3300</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Sweater Almendro</h3>
+            <p  class="product_description">Confeccionado en lana acrílica. Tiene un trenzado de rombos y cuello tortuga. Es un modelo oversize, por lo tanto es bien amplio.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$3300</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$4200</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$4200</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Camel</h5>
-              <h5>-Marrón</h5>
-              <h5>-Gris Melange</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Camel</h5>
+              <h5 class="color_options">-Marrón</h5>
+              <h5 class="color_options">-Gris Melange</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
