--- a/sections/products_details/Vestido_Cala.html
+++ b/sections/products_details/Vestido_Cala.html
@@ -9,6 +9,7 @@
     <title>Vestido Cala</title>
 </head>
 <body>
+
   <header>  
     <nav class="navbar navbar-light bg-light fixed-top">
         <div class="container-fluid">
@@ -41,14 +42,15 @@
     </div>
 </nav>
 </header>
-    <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+<main>
+      <div class="product_general">
+        <div id="carouselExampleDark" class="carousel carousel-dark presentacion_producto slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Vestido Cala.jpg" class="d-block w-100" alt="...">
+                <img src="../../Assets/Vestido Cala.jpg" class="d-block w-100 img_product" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -61,21 +63,22 @@
             </button>
           </div>
           <div>
-            <h3>Vestido Cala</h3>
-            <p>Vestido largo de mangas cortas, confeccionado en crepe viscosa. Tiene cuello redondo y bolsillos laterales.</p>
-            <div>
-              <h3>$6900</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Vestido Cala</h3>
+            <p class="product_description">Vestido largo de mangas cortas, confeccionado en crepe viscosa. Tiene cuello redondo y bolsillos laterales.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$6900</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$8800</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$8800</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Lila</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Lila</h5>
             </div>
-        </div>
+          </div>
+      </div>
     </main>
     <footer class="footer_compra">
       <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
