--- a/sections/products_details/Capa_Acacia.html
+++ b/sections/products_details/Capa_Acacia.html
@@ -42,7 +42,8 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -51,26 +52,26 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Capa Acacia beige.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Capa Acacia beige.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Beige</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Capa-Acacia-beige-2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Capa-Acacia-beige-2.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Beige</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Capa Acacia mostaza.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Capa Acacia mostaza.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Mostaza</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Capa Acacia mostaza 2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Capa Acacia mostaza 2.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Mostaza</h5>
                 </div>
               </div>
@@ -85,20 +86,21 @@
             </button>
           </div>
           <div>
-            <h3>Capa Acacia</h3>
-            <p>Sin mangas. De paño grueso liso, forrada por dentro. Capa cruzada, con bolsillos laterales y botones al frente.</p>
-            <div>
-              <h3>$10500</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Capa Acacia</h3>
+            <p class="product_description">Sin mangas. De paño grueso liso, forrada por dentro. Capa cruzada, con bolsillos laterales y botones al frente.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$10500</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$13400</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$13400</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Beige</h5>
-              <h5>-Mostaza</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Beige</h5>
+              <h5 class="color_options">-Mostaza</h5>
+            </div>
             </div>
         </div>
     </main>
