--- a/sections/products_details/Combo_Dalia.html
+++ b/sections/products_details/Combo_Dalia.html
@@ -42,7 +42,8 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -52,32 +53,32 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Remerón y pantalón Dalia verde militar.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Remerón y pantalón Dalia verde militar.png" class="d-block w-100 img_product" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Verde militar</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Remerón y pantalón Dalia verde militar (1).png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Remerón y pantalón Dalia verde militar (1).png" class="d-block w-100 img_product" alt="...">
+                <div class="carousel-caption  d-block">
                   <h5>Verde militar</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Remerón y pantalón Dalia camel.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Remerón y pantalón Dalia camel.png" class="d-block w-100 img_product" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Camel</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Remerón y pantalón Dalia camel (1).png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Remerón y pantalón Dalia camel (1).png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Camel</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Remerón y pantalón Dalia camel (2).png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Remerón y pantalón Dalia camel (2).png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Camel</h5>
                 </div>
               </div>
@@ -92,21 +93,22 @@
             </button>
           </div>
           <div>
-            <h3>Conjunto Dalia</h3>
-            <p>Confeccionado en morley. Es un pantalón recto, con bolsillos laterales y cordón en la cintura. Remera oversize con sisas caídas</p>
-            <div>
-              <h3>$7000</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Conjunto Dalia</h3>
+            <p class="product_description">Confeccionado en morley. Es un pantalón recto, con bolsillos laterales y cordón en la cintura. Remera oversize con sisas caídas</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$7000</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$8800</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$8800</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Verde militar</h5>
-              <h5>-Camel</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Verde militar</h5>
+              <h5 class="color_options">-Camel</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
