--- a/sections/products_details/Combo_Gardenia.html
+++ b/sections/products_details/Combo_Gardenia.html
@@ -42,17 +42,18 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Palazzo y remera Gardenia.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Palazzo y remera Gardenia.png" class="img_product d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Palazzo Gardenia 2.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Palazzo Gardenia 2.png" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -65,19 +66,20 @@
             </button>
           </div>
           <div>
-            <h3>Conjunto Gardenia</h3>
-            <p>Confeccionada en morley bastón ancho. Remera con mangas terminadas en dobladillo y cuello bote al corte. Pantalón súper ancho con bolsillos laterales y cordón en la cintura</p>
-            <div>
-              <h3>$7700</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3  class="product_title">Conjunto Gardenia</h3>
+            <p class="product_description">Confeccionada en morley bastón ancho. Remera con mangas terminadas en dobladillo y cuello bote al corte. Pantalón súper ancho con bolsillos laterales y cordón en la cintura</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$7700</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$9700</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$9700</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Gris</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Gris</h5>
+            </div>
             </div>
         </div>
     </main>
