--- a/sections/products_details/Mono_Amapolas.html
+++ b/sections/products_details/Mono_Amapolas.html
@@ -42,17 +42,18 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Mono Amapolas.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Mono Amapolas.png" class="img_product d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Mono Amapolas estampados.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Mono Amapolas estampados.png" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -65,20 +66,21 @@
             </button>
           </div>
           <div>
-            <h3>Mono Amapolas</h3>
-            <p> Confeccionado en fibrana, con breteles regulables, escote V en frente y espalda. Con bolsillos laterales</p>
-            <div>
-              <h3>$5200</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Mono Amapolas</h3>
+            <p class="product_description"> Confeccionado en fibrana, con breteles regulables, escote V en frente y espalda. Con bolsillos laterales</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$5200</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$6600</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$6600</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Estampado, diferentes tonos</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Estampado, diferentes tonos</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
