--- a/sections/products_details/Mono_Iris.html
+++ b/sections/products_details/Mono_Iris.html
@@ -42,21 +42,22 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Mono Iris 1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Mono Iris 1.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Beige y negro</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Mono iris 2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Mono iris 2.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Verde militar y negro</h5>
                 </div>
                 </div>
@@ -71,21 +72,22 @@
             </button>
           </div>
           <div>
-            <h3>Mono Iris</h3>
-            <p>Mono sin mangas, confeccionado en crepe viscosa, con escote V en frente y espalda. Tiene bolsillos laterales y cinta al frente para ajustar</p>
-            <div>
-              <h3>$6100</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Mono Iris</h3>
+            <p class="product_description">Mono sin mangas, confeccionado en crepe viscosa, con escote V en frente y espalda. Tiene bolsillos laterales y cinta al frente para ajustar</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$6100</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$7800</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$7800</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Beige y negro</h5>
-              <h5>-Verde militar y negro</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Beige y negro</h5>
+              <h5 class="color_options">-Verde militar y negro</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
