--- a/sections/products_details/Mono_Magnolia.html
+++ b/sections/products_details/Mono_Magnolia.html
@@ -42,13 +42,14 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Mono Magnolia.jpg" class="d-block w-100" alt="...">
+                <img src="../../Assets/Mono Magnolia.jpg" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -61,20 +62,21 @@
             </button>
           </div>
           <div>
-            <h3>Mono Magnolia</h3>
-            <p>Mono largo de morley, con cuello V, bolsillos laterales y terminaciones en volados.</p>
-            <div>
-              <h3>$6500</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Mono Magnolia</h3>
+            <p class="product_description">Mono largo de morley, con cuello V, bolsillos laterales y terminaciones en volados.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$6500</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$8300</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$8300</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Azul</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Azul</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
