--- a/sections/products_details/Palazzo_Gardenia.html
+++ b/sections/products_details/Palazzo_Gardenia.html
@@ -42,13 +42,14 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Palazzo Gardenia.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Palazzo Gardenia.png" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -61,21 +62,23 @@
             </button>
           </div>
           <div>
-            <h3>Palazzo Gardenia</h3>
-            <p>Súper ancho, confeccionado en morley bastón ancho. Tiene bolsillos laterales y cinta ancha en la cintura</p>
-            <div>
-              <h3>$4200</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Palazzo Gardenia</h3>
+            <p class="product_description">Súper ancho, confeccionado en morley bastón ancho. Tiene bolsillos laterales y cinta ancha en la cintura</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$4200</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$5300</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$5300</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Gris</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Gris</h5>
             </div>
         </div>
+        </div>
+        </main>
         <footer class="footer_compra">
           <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
             <div class="footer_img">
@@ -89,7 +92,6 @@
               </div>
           </div>
       </footer>
-    </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
