--- a/sections/products_details/Pantalón_Lilo.html
+++ b/sections/products_details/Pantalón_Lilo.html
@@ -42,13 +42,14 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Pantalón Lilo.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Pantalón Lilo.png" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -61,20 +62,21 @@
             </button>
           </div>
           <div>
-            <h3>Pantalón Lilo</h3>
-            <p>Pantalón de lanilla morley diferenciado. Corte recto y ancho. Tiene bolsillos laterales y elástico en la cintura.</p>
-            <div>
-              <h3>$3600</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3  class="product_title">Pantalón Lilo</h3>
+            <p  class="product_description">Pantalón de lanilla morley diferenciado. Corte recto y ancho. Tiene bolsillos laterales y elástico en la cintura.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$3600</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$4600</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$4600</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Negro</h5>
+            <div  style="margin-bottom: 140px;">
+              <h4  class="color">Color</h4>
+              <h5 class="color_options">-Negro</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
