--- a/sections/products_details/Remera_Alameda.html
+++ b/sections/products_details/Remera_Alameda.html
@@ -42,17 +42,18 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Remera Alameda.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Remera Alameda.png" class="img_product d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Remer Alameda detalle.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Remer Alameda detalle.png" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -65,20 +66,21 @@
             </button>
           </div>
           <div>
-            <h3>Remera Alameda</h3>
-            <p>Remera manga larga, con cuello redondo y amplio. Tiene botones en el frente.</p>
-            <div>
-              <h3>$2880</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Remera Alameda</h3>
+            <p class="product_description">Remera manga larga, con cuello redondo y amplio. Tiene botones en el frente.</p>
+            <div  class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$2880</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$3600</h3>
-              <h4>Crédito</h4>
+            <div  class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$3600</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Gris</h5>
+            <div  style="margin-bottom: 140px;">
+              <h4  class="color">Color</h4>
+              <h5 class="color_options">-Gris</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
