--- a/sections/products_details/Tapado_Alamo.html
+++ b/sections/products_details/Tapado_Alamo.html
@@ -42,7 +42,8 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -51,25 +52,25 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Tapado-Álamo-terracota.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Tapado-Álamo-terracota.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Terracota</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Tapado-Álamo-terracota-2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Tapado-Álamo-terracota-2.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Terracota</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Tapado-Álamo-blanco.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Tapado-Álamo-blanco.png" class="d-block w-100 img_product" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Blanco</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Tapado Álamo dos colores.JPG" class="d-block w-100" alt="...">
+                <img src="../../Assets/Tapado Álamo dos colores.JPG" class="img_product d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -82,21 +83,22 @@
             </button>
           </div>
           <div>
-            <h3>Tapado Álamo</h3>
-            <p>De paño liso, forrado por dentro. Con bolsillos laterales y cinturón ajustable.</p>
-            <div>
-              <h3>$11600</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Tapado Álamo</h3>
+            <p class="product_description">De paño liso, forrado por dentro. Con bolsillos laterales y cinturón ajustable.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$11600</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$14900</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$14900</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Blanco</h5>
-              <h5>-Terracota</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Blanco</h5>
+              <h5 class="color_options">-Terracota</h5>
             </div>
+        </div>
         </div>
     </main>
     <footer class="footer_compra">
