--- a/sections/products_details/Tapado_Tule.html
+++ b/sections/products_details/Tapado_Tule.html
@@ -42,7 +42,8 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide presentacion_producto" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -50,20 +51,20 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Tapado Tule verde inglés.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Tapado Tule verde inglés.png" class="d-block w-100 img_product" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Verde Inglés</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Tapado Tule negro.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Tapado Tule negro.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Negro</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Tapado Tule negro 2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Tapado Tule negro 2.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Negro</h5>
                 </div>
               </div>
@@ -78,22 +79,23 @@
             </button>
           </div>
           <div>
-            <h3>Tapado Tule</h3>
-            <p>De paño liso, forrado por dentro. Con bolsillos laterales y un botón en el frente.</p>
-            <div>
-              <h3>$12700</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Tapado Tule</h3>
+            <p class="product_description">De paño liso, forrado por dentro. Con bolsillos laterales y un botón en el frente.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$12700</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
             <div>
-              <h3>$16300</h3>
-              <h4>Crédito</h4>
+              <h3 class="precio_txt" style="font-weight:bolder;">$16300</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Verde Inglés</h5>
-              <h5>-Negro</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Verde Inglés</h5>
+              <h5 class="color_options">-Negro</h5>
             </div>
         </div>
+      </div>
     </main>
     <footer class="footer_compra">
       <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
