--- a/sections/products_details/Vestido_Azalea.html
+++ b/sections/products_details/Vestido_Azalea.html
@@ -42,7 +42,8 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide presentacion_producto" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -51,26 +52,26 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Vestido Azalea gris 1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Vestido Azalea gris 1.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Gris</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Vestido Azalea gris 2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Vestido Azalea gris 2.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Gris</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Vestido Azalea rosa.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Vestido Azalea rosa.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Rosa</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Vestido Azalea rosa 2.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Vestido Azalea rosa 2.png" class="img_product d-block w-100" alt="...">
+                <div class="carousel-caption d-block">
                   <h5>Rosa</h5>
                 </div>
               </div>
@@ -85,24 +86,25 @@
             </button>
           </div>
           <div>
-            <h3>Vestido Azalea</h3>
-            <p>Vestido corto y amplio, confeccionado en morley. De mangas cortas y terminaciones en volados.</p>
-            <div>
-              <h3>$4500	
+            <h3 class="product_title">Vestido Azalea</h3>
+            <p class="product_description">Vestido corto y amplio, confeccionado en morley. De mangas cortas y terminaciones en volados.</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$4500	
               </h3>
-              <h4>Transferencia/Débito</h4>
+              <h4  class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$5700		
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$5700		
               </h3>
-              <h4>Crédito</h4>
+              <h4  class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Gris</h5>
-              <h5>-Rosa</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Gris</h5>
+              <h5 class="color_options">-Rosa</h5>
             </div>
         </div>
+      </div>
     </main>
     <footer class="footer_compra">
       <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
