--- a/sections/products_details/Vestido_Begonia.html
+++ b/sections/products_details/Vestido_Begonia.html
@@ -42,13 +42,14 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Vestido Begonia.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Vestido Begonia.png" class="d-block w-100 img_product" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -61,23 +62,24 @@
             </button>
           </div>
           <div>
-            <h3>Vestido Begonia</h3>
-            <p>Vestido largo de morley con cuello redondo, mangas cortas y bolsillos laterales</p>
-            <div>
-              <h3>$6900</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Vestido Begonia</h3>
+            <p class="product_description">Vestido largo de morley con cuello redondo, mangas cortas y bolsillos laterales</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$6900</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$8800		
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$8800		
               </h3>
-              <h4>Crédito</h4>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Combinado negro, blanco y tierra	
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Combinado negro, blanco y tierra	
               </h5>
             </div>
         </div>
+      </div>
     </main>
     <footer class="footer_compra">
       <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
