--- a/sections/products_details/Vestido_Fresia.html
+++ b/sections/products_details/Vestido_Fresia.html
@@ -42,17 +42,18 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="presentacion_producto carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Vestido Fresia 2.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Vestido Fresia 2.png" class="d-block w-100 img_product" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Vesrtido Fresia 1.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Vesrtido Fresia 1.png" class="d-block w-100 img_product" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -65,22 +66,23 @@
             </button>
           </div>
           <div>
-            <h3>Vestido Fresia</h3>
-            <p>Vestido largo de lino. Con escote V en frente y espalda. Tiene tajos y bolsillos laterales. Viene con jaretas en cintura con terminales para ajustar</p>
-            <div>
-              <h3>$5000</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Vestido Fresia</h3>
+            <p class="product_description">Vestido largo de lino. Con escote V en frente y espalda. Tiene tajos y bolsillos laterales. Viene con jaretas en cintura con terminales para ajustar</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$5000</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$6400</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$6400</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Beige</h5>
-              <h5>-Negro</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Beige</h5>
+              <h5 class="color_options">-Negro</h5>
             </div>
         </div>
+      </div>
     </main>
     <footer class="footer_compra">
       <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
