--- a/sections/products_details/Vestido_Jazmin.html
+++ b/sections/products_details/Vestido_Jazmin.html
@@ -42,7 +42,8 @@
 </nav>
 </header>
     <main>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="product_general">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide presentacion_producto" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -51,24 +52,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="../../Assets/Vestido Jazmin 1.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="../../Assets/Vestido Jazmin 1.jpg" class="img_product d-block w-100" alt="...">
+                    <div class="carousel-caption d-block">
                         <h5>Gris y celeste</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../../Assets/Vestido Jazmin 2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="../../Assets/Vestido Jazmin 2.jpg" class="img_product d-block w-100" alt="...">
+                    <div class="carousel-caption d-block">
                         <h5>Gris y aqua</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Vestido Jazmin detalle 1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Vestido Jazmin detalle 1.png" class="d-block w-100 img_product" alt="...">
+                <div class="carousel-caption d-block">
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../../Assets/Vestido Jazmin detalle 2.png" class="d-block w-100" alt="...">
+                <img src="../../Assets/Vestido Jazmin detalle 2.png" class="d-block w-100 img_product" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -81,22 +82,23 @@
             </button>
           </div>
           <div>
-            <h3>Vestido Jazmin</h3>
-            <p>Vestido largo de mangas cortas, confeccionado en crepe viscosa. Tiene cuello redondo y bolsillos laterales</p>
-            <div>
-              <h3>$6000</h3>
-              <h4>Transferencia/Débito</h4>
+            <h3 class="product_title">Vestido Jazmin</h3>
+            <p class="product_description">Vestido largo de mangas cortas, confeccionado en crepe viscosa. Tiene cuello redondo y bolsillos laterales</p>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$6000</h3>
+              <h4 class="precio_txt">Transferencia/Débito</h4>
             </div>
-            <div>
-              <h3>$7700</h3>
-              <h4>Crédito</h4>
+            <div class="precio">
+              <h3 class="precio_txt" style="font-weight:bolder;">$7700</h3>
+              <h4 class="precio_txt">Crédito</h4>
             </div>
-            <div>
-              <h4>Color</h4>
-              <h5>-Gris y celeste</h5>
-              <h5>-Gris y aqua</h5>
+            <div style="margin-bottom: 140px;">
+              <h4 class="color">Color</h4>
+              <h5 class="color_options">-Gris y celeste</h5>
+              <h5 class="color_options">-Gris y aqua</h5>
             </div>
         </div>
+      </div>
     </main>
     <footer class="footer_compra">
       <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
