--- a/sections/products_details/Vestido_Melissa.html
+++ b/sections/products_details/Vestido_Melissa.html
@@ -43,7 +43,8 @@
 </header>
     <main>
         <!-- Carrousel FOTOS PRODUCTO -->
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="product_general">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide presentacion_producto" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -51,14 +52,14 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../Assets/Vestido Melissa 1.jpg" class="d-block w-100" alt="Vestido Melissa">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Vestido Melissa 1.jpg" class="d-block w-100 img_product" alt="Vestido Melissa">
+                <div class="carousel-caption d-block">
                   <p>Azul y celeste</p>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../Assets/Vestido Melissa 2.jpg" class="d-block w-100" alt="Vestido Melissa">
-                <div class="carousel-caption d-none d-md-block">
+                <img src="../../Assets/Vestido Melissa 2.jpg" class="d-block w-100 img_product" alt="Vestido Melissa">
+                <div class="carousel-caption d-block">
                   <p>Verde militar y negro</p>
                 </div>
               </div>
@@ -73,23 +74,24 @@
             </button>
           </div>
           <div>
-              <h3>Vestido Melissa</h3>
-              <p>Vestido largo confeccionado en crepe viscosa. Tiene cuello V, mangas cortas y bolsillos laterales.
+              <h3 class="product_title">Vestido Melissa</h3>
+              <p class="product_description">Vestido largo confeccionado en crepe viscosa. Tiene cuello V, mangas cortas y bolsillos laterales.
               </p>
-              <div>
-                <h3>$6500</h3>
-                <h4>Transferencia/Débito</h4>
+              <div class="precio">
+                <h3 class="precio_txt" style="font-weight:bolder;">$6500</h3>
+                <h4 class="precio_txt">Transferencia/Débito</h4>
               </div>
-              <div>
-                <h3>$8300</h3>
-                <h4>Crédito</h4>
+              <div class="precio">
+                <h3 class="precio_txt" style="font-weight:bolder;">$8300</h3>
+                <h4 class="precio_txt">Crédito</h4>
               </div>
-              <div>
-                <h4>Color</h4>
-                <h5>-Azul y celeste</h5>
-                <h5>-Verde militar y negro</h5>
+              <div style="margin-bottom: 140px;">
+                <h4 class="color">Color</h4>
+                <h5 class="color_options">-Azul y celeste</h5>
+                <h5 class="color_options">-Verde militar y negro</h5>
               </div>
           </div>
+        </div>
     </main>
     <footer class="footer_compra">
       <div style="display:flex; justify-items: center; align-items: center; flex-flow: column wrap;">
