--- a/sections/productos.html
+++ b/sections/productos.html
@@ -162,7 +162,7 @@
             <img src="../Assets/mono_Alma_1.png" class="card-img-top" alt="Mono Alma"></a>
             <div class="card-body">
               <h5 class="card-title">Mono Alma</h5>
-              <span class="card-text">$Precio</span>
+              <span class="card-text">$6000</span>
             </div>
           </div>
         </div>
